# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonci.yml
gendiff/: __init__.py  cli.py  gendiff.py  generate_diff.py  get_diff.py  parse_data.py
gendiff/formatters/: plain.py  plane.py  stylish.py
gendiff/fuctions/: generate_diff.py  get_diff.py
gendiff/scripts/: cli.py  formating.py  gendiff.py  generate_diff.py
hexlet_code/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result_json.txt
